--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ footer {
 }
 
 .nav-container {
-    background-color: #f5e0c3; /* Warna krem */
+    background-color: #8b0000; /* Warna krem */
     padding: 10px;
     border-radius: 15px;
     display: flex;
