--- a/style.css
+++ b/style.css
@@ -247,28 +247,31 @@ footer {
 /* Styling Navigasi */
 .navbar {
     background-color: #8b0000; /* Merah gelap */
-    padding: 10px;
+    padding: 15px;
     display: flex;
     justify-content: center;
 }
 
 .nav-container {
-    background-color: #8b0000; /* Warna krem */
+    background-color: #f5e0c3; /* Warna krem */
     padding: 10px;
     border-radius: 15px;
     display: flex;
-    gap: 15px;
+    gap: 20px;
+    justify-content: center;
+    align-items: center;
 }
 
 .nav-container a {
     background-color: #d2a679; /* Warna krem kecoklatan */
     color: #4d0e0e; /* Merah tua */
     font-weight: bold;
-    padding: 10px 20px;
+    padding: 8px 16px;
     border-radius: 10px;
     font-size: 18px;
     text-decoration: none;
     text-align: center;
+    display: inline-block;
 }
 
 .nav-container a:hover {
