--- a/style.css
+++ b/style.css
@@ -246,35 +246,36 @@ footer {
 
 /* Styling Navigasi */
 .navbar {
-    background-color: #8b0000; /* Merah gelap */
+    background-color: #8b0000; 
     padding: 15px;
     display: flex;
     justify-content: center;
 }
 
 .nav-container {
-    background-color: #f5e0c3; /* Warna krem */
+    background-color: #f5e0c3;
     padding: 10px;
     border-radius: 15px;
     display: flex;
     gap: 20px;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 .nav-container a {
-    background-color: #d2a679; /* Warna krem kecoklatan */
-    color: #4d0e0e; /* Merah tua */
+    background-color: #d2a679;
+    color: #4d0e0e;
     font-weight: bold;
-    padding: 8px 16px;
+    padding: 10px 20px;
     border-radius: 10px;
-    font-size: 18px;
+    font-size: 16px;
     text-decoration: none;
     text-align: center;
     display: inline-block;
 }
 
 .nav-container a:hover {
-    background-color: #a87c4f; /* Warna lebih gelap saat hover */
+    background-color: #a87c4f;
     color: white;
 }
