--- a/style.css
+++ b/style.css
@@ -244,9 +244,13 @@ footer {
     width: 100%;
 }
 
-/* Styling Navigasi */
+a:hover {
+    text-decoration: underline;
+    color: #a31e1e;
+}
+
 .navbar {
-    background-color: #8b0000; 
+    background-color: #8b0000;
     padding: 15px;
     display: flex;
     justify-content: center;
@@ -260,22 +264,28 @@ footer {
     gap: 20px;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
 }
 
 .nav-container a {
     background-color: #d2a679;
-    color: #4d0e0e;
+    color: maroon;
     font-weight: bold;
-    padding: 10px 20px;
+    padding: 10px 18px;
     border-radius: 10px;
-    font-size: 16px;
+    font-size: 18px;
     text-decoration: none;
     text-align: center;
     display: inline-block;
+    transition: background-color 0.3s, transform 0.2s;
 }
 
 .nav-container a:hover {
     background-color: #a87c4f;
     color: white;
+    transform: scale(1.1);
+}
+
+.container {
+    text-align: left;
 }
